# locmai-home

./: .eleventy.js  .gitignore  Cargo.toml  Makefile  flake.nix  hello.txt  index.html  index.njk  package-lock.json  package.json  projects.njk  renovate.json5  rust-toolchain.toml  tags.njk  tailwind.config.js
.well-known/: keybase.txt.njk
_data/: metadata.json
_includes/: projectist.njk
_includes/layouts/: base.njk  project.njk
about/: index.md
css/: index.css  prism-base16-monokai.dark.css
posts/: 2021_recap.md  2023_kick_off.md  I_hate_kustomize.md  from_a_to_z_to_a.md  helm_manifests_structure.md  humble_is_the_theme.md  humble_the_theme.md  not_so_simple_udp_proxy.md  overkilled_monitoring_system_pt1.md  python_tips_and_tricks_0.md  steam_deck_as_control_plane.md  steam_deck_as_controller_plane.md  the_layered_stack.md  vault_argocd_gitops.md  yuta_thoughts.md
projects/: humble.md  humble_revamp.md  stalker_chan.md  yuta.md
resume/: index.md  metadata.yaml
src/: app.rs  fallback.rs  lib.rs  main.rs
src/components/: footer.rs  header.rs
src/pages/: home.rs
style/: output.css
thoughts/: about-infrastructure-as-code.md
