[package]
name = "locmai-home"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
copy_dir = "0.1.3"
leptos = { version = "0.7.2", features = ["csr", "nightly"] }
leptos-use = "0.15.0"
leptos_meta = "0.7.2"
leptos_router = "0.7.2"
log = "0.4.22"
